# Python.PubSub.DevTools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_SUCCESS.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  Makefile  PACKAGE_SETUP_SUMMARY.md  QUICK_START.sh  README.md  RENAMING_COMPLETE.md  SETUP_COMPLETE.md  debug_event_recorder.py  devtools_config.yaml  pyproject.toml  requirements-dev.txt  setup.py
.run/: serve-event-flow.run.xml  serve-event-recorder.run.xml  serve-mock-exchange.run.xml  serve-scenario-testing.run.xml
docs/: 01_ARCHITECTURE.md  02_USE_CASES.md  03_METRICS.md  04_ROADMAP.md  05_QUICK_WINS.md  07_IMPLEMENTATION_SUMMARY.md  09_PACKAGE_SETUP_SUMMARY.md  INDEX.md  README.md
docs/architecture/: 01_ARCHITECTURE.md
docs/guides/: 06_MIGRATION_GUIDE.md  10_CLI_USAGE.md
docs/implementation/: 07_IMPLEMENTATION_SUMMARY.md  08_MIGRATION_SUMMARY.md
docs/planning/: 03_METRICS.md  04_ROADMAP.md  05_QUICK_WINS.md
docs/status/: 99_INSTALLATION_SUCCESS.md  99_RENAMING_COMPLETE.md  99_SETUP_COMPLETE.md
examples/: basic_usage.py  config.example.yaml  devtools_config.yaml  metrics_example.py  quick_start.sh  recording_example.py  scanner_usage.py
python_pubsub_devtools/: __init__.py  config.py
python_pubsub_devtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_pubsub_devtools/cli/: main.py
python_pubsub_devtools/cli/commands/: metrics.py
python_pubsub_devtools/event_flow/: analyzer.py
python_pubsub_devtools/event_recorder/: __init__.py  server.py
python_pubsub_devtools/metrics/: __init__.py  collector.py
python_pubsub_devtools/mock_exchange/: scenario_exchange.py  server.py
python_pubsub_devtools/scenario_testing/: __init__.py  chaos_injector.py  runner.py
python_pubsub_devtools/trading/: __init__.py  candle_patterns.py  indicators.py
python_pubsub_devtools/web/static/css/: recording_detail.css
python_pubsub_devtools/web/static/js/: event_flow.js  mock_exchange.js
python_pubsub_devtools/web/templates/: event_flow.html  recording_detail.html  scenario_testing.html
replay_data/: bear_market_50_candles.json  bull_run_50_candles.json  flash_crash_60_candles.json  sample_ohlcv.csv  sample_ohlcv.json  sideways_50_candles.json  volatile_40_candles.json
src/python_pubsub_devtools/: __init__.py  config.py  service_bus.py
src/python_pubsub_devtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/python_pubsub_devtools/cli/: __init__.py  main.py
src/python_pubsub_devtools/cli/commands/: __init__.py  metrics.py
src/python_pubsub_devtools/event_flow/: API.md  README.md  __init__.py  analyze_event_flow.py  analyzer.py  generate_event_flow_image.py  generate_hierarchical_tree.py  hierarchical_tree.py  scanner.py  serve_event_flow.py  server.py  storage.py
src/python_pubsub_devtools/event_recorder/: EVENT_RECORDER_README.md  README.md  __init__.py  event_listener.py  event_recorder.py  example_recorder_usage.py  player_manager.py  recorder.py  recording_manager.py  serve_recorder.py  server.py  servicebus_proxy.py  views.py
src/python_pubsub_devtools/metrics/: collector.py
src/python_pubsub_devtools/mock_exchange/: README.md  __init__.py  example_scenarios.py  scenario_exchange.py  serve_exchange.py  server.py  views.py
src/python_pubsub_devtools/risk_analysis/: __init__.py  data_loader.py  export_manager.py  gan_trainer.py  hmm_trainer.py  scenario_generator.py
src/python_pubsub_devtools/scenario_engine/: README.md  __init__.py  assertion_checker.py  chaos_injector.py  interfaces.py  scenario_engine.py
src/python_pubsub_devtools/scenario_testing/: README.md  __init__.py  assertion_checker.py  chaos_injector.py  example_usage.py  scenario_runner.py  scenario_schema.py  schema.py  serve_testing.py  server.py  views.py
src/python_pubsub_devtools/web/static/css/: dashboard_common.css  event_flow.css  event_recorder.css  mock_exchange.css  pubsub_status.css  recording_detail.css  scenario_testing.css
src/python_pubsub_devtools/web/static/js/: event_flow.js  event_recorder.js  mock_exchange.js  pubsub_status.js  recording_detail.js  scenario_testing.js
src/python_pubsub_devtools/web/templates/: _footer.html  _header.html  _navbar.html  _pubsub_status.html  event_flow.html  event_recorder.html  footer.html  header.html  mock_exchange.html  recording_detail.html  scenario_testing.html
tests/: README.md  __init__.py  conftest.py  test_candle_patterns.py  test_indicators.py  test_market_scenarios.py  test_metrics_collector.py  test_player_manager.py  test_scenario_exchange.py
