[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_pubsub_devtools"
version = "0.1.0"
description = "Comprehensive development and debugging tools for PubSub-based event-driven architectures"
readme = "README.md"
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pandas>=2.0.0",
    "pydot>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "setuptools>=65.0",
    "wheel",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "black>=23.0",
]

[project.scripts]
pubsub-tools = "python_pubsub_devtools.cli.main:main"

[project.urls]
Homepage = "https://github.com/venantvr-trading/Python.PubSub.DevTools"
Documentation = "https://github.com/venantvr-trading/Python.PubSub.DevTools/wiki"
Repository = "https://github.com/venantvr-trading/Python.PubSub.DevTools"
Issues = "https://github.com/venantvr-trading/Python.PubSub.DevTools/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["python_pubsub_devtools*"]
exclude = [
    "python_pubsub_devtools.trading*",
]
namespaces = false

[tool.setuptools.package-data]
python_pubsub_devtools = [
    "web/templates/event_flow.html",
    "web/templates/event_recorder.html",
    "web/templates/recording_detail.html",
    "web/templates/mock_exchange.html",
    "web/templates/scenario_testing.html",
    "web/static/css/event_flow.css",
    "web/static/css/event_recorder.css",
    "web/static/css/recording_detail.css",
    "web/static/css/mock_exchange.css",
    "web/static/css/scenario_testing.css",
    "web/static/js/event_flow.js",
    "web/static/js/event_recorder.js",
    "web/static/js/recording_detail.js",
    "web/static/js/mock_exchange.js",
    "web/static/js/scenario_testing.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310']
